New Depsgraph - Render View Mask is not initialized correctly #52749

Closed
opened 2017-09-14 10:51:14 +02:00 by Carlo Andreacchio · 5 comments

System Information
Linux x64 GTX 1080 Cinnamon Ubuntu 17.04

Blender Version
Broken: 6f633dec5d

Short description of error
New Depsgraph - Sorry @Sergey
Loading up a file which has the renderview set to mask, then clicking on the mask timeline (not the timeline panel) causes blender to crash

Exact steps for others to reproduce the error

  1. Open attached blend file with new depsgraph
  2. click on frame 1 on the blue timeline mask bar
  3. crash

bug1.blend

**System Information** Linux x64 GTX 1080 Cinnamon Ubuntu 17.04 **Blender Version** Broken: 6f633dec5d105ad91dcb5774a6fd4fb06bf264a5 **Short description of error** New Depsgraph - Sorry @Sergey Loading up a file which has the renderview set to mask, then clicking on the mask timeline (not the timeline panel) causes blender to crash **Exact steps for others to reproduce the error** 1. Open attached blend file with new depsgraph 2. click on frame 1 on the blue timeline mask bar 3. crash [bug1.blend](https://archive.blender.org/developer/F798098/bug1.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscribers: @Sergey, @candreacchio

Added subscribers: @Sergey, @candreacchio

also gets triggered when you press escape whilst rendering and mask view is up & no other modes have been initialised.

also gets triggered when you press escape whilst rendering and mask view is up & no other modes have been initialised.

This issue was referenced by 09c6c6c486

This issue was referenced by 09c6c6c486f153a9c9ac7b76bcb010f1354074bc

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52749
No description provided.