Fix T52749: New Depsgraph - Render View Mask is not initialized correctly